Include java modules for Java 17